# TriggerFS

./: .gitignore  Cargo.toml  README.md
TriggerFS/: Cargo.toml
TriggerFS/src/: daemon.rs  main.rs  signal_handler.rs
actors/executor/: Cargo.toml
actors/executor/src/: lib.rs
actors/watcher/: Cargo.toml
actors/watcher/src/: lib.rs
file-organizer/: Cargo.toml
file-organizer/src/: daemon.rs  logger.rs  main.rs
libs/fs/: Cargo.toml
libs/fs/src/: actions.rs  conditions.rs  fs_watcher.rs  lib.rs
libs/fs/src/actions/: conditions.rs  matcher.rs  mod.rs
main/: Cargo.toml
main/src/: daemon.rs  logger.rs  main.rs  signal_handler.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
services/main-topology/: Cargo.toml
services/main-topology/src/: lib.rs
