[workspace.package]
name = "FileOrganizer"
version = "0.1.0"
edition = "2021"
readme = "README.md"
# TODO: 
# description = ""

[workspace]
resolver = "2"
# TODO: тут нужно понять как где и кто
members = ["file-organizer", "libs/fs", "protocol", "services"]
# exclude = []

[workspace.dependencies]
# акторы
elfo = { version = "0.2.0-alpha.16", features = ["full"] }
# async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# логи
tracing = "0.1"
tracing-subscriber = "0.3"

# работа с файловой системой возможно стоит перенсти в либы акторов по необходимости
# notify = { version = "6.1.1", default-features = false, features = [
#   "macos_kqueue",
# ] }
notify = "6"
walkdir = "2.5"
image = "0.25"
toml = "0.8.19"


[profile.release]
lto = "fat"
strip = true
codegen-units = 1
