[workspace.package]
name = "FileOrganizer"
version = "0.1.1"
edition = "2021"
readme = "README.md"
# TODO: 
# description = ""

[workspace]
resolver = "2"
# TODO: тут нужно понять как где и кто
members = ["actors/*", "file-organizer", "libs/*", "protocol", "services/*"]
# exclude = []

[workspace.dependencies]
# акторы
elfo = { version = "0.2.0-alpha.16", features = ["full"] }
# async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# логи
tracing = "0.1"
tracing-subscriber = "0.3"

# работа с файловой системой возможно стоит перенсти в либы акторов по необходимости
notify = { version = "6", features = ["default", "serde"] }
walkdir = "2.5"
infer = "0.16"

image = "0.25"
toml = "0.8.19"

# серриализаци/дессериализация
serde = "1"
serde_json = "1"

# другое
regex = "1.10"

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
