[package]
name = "TriggerFS"

# repository.workspace = true
# authors.workspace = true
# license.workspace = true
edition.workspace = true
readme.workspace = true
# rust-version.workspace = true


[dependencies]
# аторы 
elfo.workspace = true
main-topology = { path = "../services/main-topology" }

# асинк 
tokio.workspace = true
futures.workspace = true
fs = { path = "../libs/fs" }

daemonize = "0.5"

# логи
tracing.workspace = true
tracing-subscriber.workspace = true

notify.workspace = true
