[package]
name = "main"

# repository.workspace = true
# authors.workspace = true
# license.workspace = true
edition.workspace = true
readme.workspace = true
# rust-version.workspace = true


[dependencies]
# асинк 
tokio.workspace = true


daemonize = "0.5"

# логи
tracing.workspace = true
tracing-subscriber.workspace = true
log.workspace = true
env_logger.workspace = true
