[package]
name = "watcher"
version.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
tokio.workspace = true
elfo.workspace = true

tracing.workspace = true

serde.workspace = true
serde_json.workspace = true
protocol = { path = "../../protocol" }
fs = { path = "../../libs/fs" }
