[package]
name = "fs"
version.workspace = true
edition.workspace = true
readme.workspace = true


[dependencies]
tokio.workspace = true
futures.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

serde.workspace = true

notify.workspace = true
infer.workspace = true

regex.workspace = true
